convert java 25 structured concurrency to executable example